--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -9,9 +9,12 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="353dp"
-        android:layout_height="382dp"
-        android:scaleType="centerCrop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="200dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
