--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,8 @@
         android:layout_height="40dp"
         android:background="@drawable/roundcorner"
         android:hint="Ingrese una Direccion"
+        android:imeOptions="actionSend"
         android:inputType="text"
-        android:imeOptions="actionSend"/>
+        android:translationY="40dp" />
 
 </FrameLayout>
